<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/danh_s_ch_sinh_vi_n"

        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/thongTinSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/th_ng_tin_sinh_vi_n"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textDateBirth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textDateBirth"
        app:layout_constraintTop_toBottomOf="@+id/textDateBirth" />

    <TextView
        android:id="@+id/textMaSoSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/m_s_sinh_vi_n"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textHoTen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textHoTen"
        app:layout_constraintTop_toBottomOf="@+id/textHoTen" />


    <TextView
        android:id="@+id/textDateBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ng_y_sinh"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textMaSoSV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textMaSoSV"
        app:layout_constraintTop_toBottomOf="@+id/textMaSoSV" />

    <TextView
        android:id="@+id/textHoTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/h_v_t_n"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/thongTinSV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/thongTinSV"
        app:layout_constraintTop_toBottomOf="@+id/thongTinSV" />

    <TextView
        android:id="@+id/textDiaChi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/a_ch"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <Button
        android:id="@+id/addSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="68dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deleteSV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/updateSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteSV"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toEndOf="@+id/addSV"
        app:layout_constraintTop_toBottomOf="@+id/textDiaChi"
        app:layout_constraintVertical_bias="0.577" />

    <Button
        android:id="@+id/deleteSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateSV"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTenSv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/nh_p_t_n_sinh_vi_n"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textHoTen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textHoTen"
        app:layout_constraintTop_toTopOf="@+id/textHoTen"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextMaSo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/nh_p_m_s_sinh_vi_n"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textMaSoSV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textMaSoSV"
        app:layout_constraintTop_toTopOf="@+id/textMaSoSV"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/nh_p_a_ch"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textDiaChi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDiaChi"
        app:layout_constraintTop_toTopOf="@+id/textDiaChi"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/nh_p_email"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textEmail"
        app:layout_constraintTop_toTopOf="@+id/textEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextDateBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/nh_p_ng_y_sinh"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textDateBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDateBirth"
        app:layout_constraintTop_toTopOf="@+id/textDateBirth"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>